Most of these notes seem to no longer apply.  I'll make an effort to clean on the next go around.

--- a/htdocs/card-support/Pinnacle_PCTV_Pro_Miro_PCTV_Pro_Notes.htm
+++ b/htdocs/card-support/Pinnacle_PCTV_Pro_Miro_PCTV_Pro_Notes.htm
@@ -42,11 +42,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <p><b>Joe Floyd</b> reports:</p>
-      <p>&quot;The card supports stereo TV, but dTV doesn't always like that setting. 
-        Only a few problems with normal mono TV settings. Audio will sometimes 
-        not come in if the channel is not very strong. In Stereo mode I very often 
-        get a few seconds of normal audio and then very loud static. The static 
-        is in stereo though.&quot;</p>
+      <p>&quot;The card supports stereo TV, but DScaler doesn't always like that 
+        setting. Only a few problems with normal mono TV settings. Audio will 
+        sometimes not come in if the channel is not very strong. In Stereo mode 
+        I very often get a few seconds of normal audio and then very loud static. 
+        The static is in stereo though.&quot;</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
