--- a/htdocs/card-support/Terratec_TValue_Notes.htm
+++ b/htdocs/card-support/Terratec_TValue_Notes.htm
@@ -42,8 +42,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <p><b>Timo Jarvenpaa</b> reports:</p>
-      <p>&quot;dTV works with my Terratec TValue card also when I selected TView99 
-        CPH063 [as the tuner type].&quot;</p>
+      <p>&quot;[DScaler] works with my Terratec TValue card also when I selected 
+        TView99 CPH063 [as the tuner type].&quot;</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
