--- a/htdocs/card-support/Typhoon_TV_Notes.htm
+++ b/htdocs/card-support/Typhoon_TV_Notes.htm
@@ -42,8 +42,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <p><b>An Anonymous User </b> reports:</p>
-      <p>&quot;This card uses a Temic tuner. dTV needs to handle it like a Philips 
-        PAL, a few channels are missing.&quot;</p>
+      <p>&quot;This card uses a Temic tuner. [DScaler] needs to handle it like 
+        a Philips PAL, a few channels are missing.&quot;</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
