--- a/htdocs/card-support/WinTV-DBX_Notes.htm
+++ b/htdocs/card-support/WinTV-DBX_Notes.htm
@@ -46,11 +46,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p><b>Paul Simoneau</b> reports on the card tuner:</p>
       <p>&quot;I had configuration problems with 1.4 (not so with 1.2). Couldn't 
         tune any cable TV stations whatsoever. Was remedied by initially tuning 
-        the station with Hauppage's software, quitting it and firing up dTV. After 
-        this, I could only view the channel that was pre-selected, couldn't do 
-        any further tuning. Switching between these two applications caused *MAJOR* 
-        instability of my system (registry corruption), which I have to attribute 
-        to dTV, since the WinTV software seems to be very solid.&quot;</p>
+        the station with Hauppage's software, quitting it and firing up [DScaler]. 
+        After this, I could only view the channel that was pre-selected, couldn't 
+        do any further tuning. Switching between these two applications caused 
+        *MAJOR* instability of my system (registry corruption), which I have to 
+        attribute to [DScaler], since the WinTV software seems to be very solid.&quot;</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
