--- a/htdocs/card-support/WinTV-FM_PAL_Notes.htm
+++ b/htdocs/card-support/WinTV-FM_PAL_Notes.htm
@@ -42,8 +42,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <p><b>Phat Phreddy</b> reports that:</p>
-      <p>&quot;Works OK but audio not so clear in dTV (WinTV2k has much better 
-        stereo and Nicam audio) with stereo channels very 'hissy' &quot;</p>
+      <p>&quot;Works OK but audio not so clear in [DScaler] (WinTV2k has much 
+        better stereo and Nicam audio) with stereo channels very 'hissy' &quot;</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
