--- a/htdocs/card-support/WinTV-Go_Notes.htm
+++ b/htdocs/card-support/WinTV-Go_Notes.htm
@@ -40,10 +40,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>PAL users may experience hardware-related (not dTV-related) rolling color 
-        bar interference. As far as we can tell, there is no software fix for 
-        this problem, but we will continue to consider possible fixes. An illustration 
-        of these diagonal bars is from a PAL VHS source, below.</p>
+      <p>PAL users may experience hardware-related (not DScaler-related) rolling 
+        color bar interference. As far as we can tell, there is no software fix 
+        for this problem, but we will continue to consider possible fixes. An 
+        illustration of these diagonal bars is from a PAL VHS source, below.</p>
       <p>&nbsp;</p>
       <p><img src="Arnold_Diagonal_Bars_PAL.jpg" width="768" height="576" border="2"></p>
       <p>&nbsp;</p>
