--- a/htdocs/card-support/WinTV-PVR_Notes.htm
+++ b/htdocs/card-support/WinTV-PVR_Notes.htm
@@ -44,8 +44,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>&quot;[My card is] set to standard BT878, tuner set to Philips 1236D 
         Input 1, Audio set to MSP Radio, MSP Radio set to Speech Channel 1 and 
         Auto Stereo Adjustment turned off.</p>
-      <p>&quot;Also the sound in on my TV-D card is into my Mic jack instead of 
-        line in.&quot;</p>
+      <p>&quot;Also the sound in on my [WinTV-PVR] card is into my Mic jack instead 
+        of line in.&quot;</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
