Updated Teletext help

--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -976,7 +976,7 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Page Up</small></p>
+            <p><small>Next Page</small></p>
           </td>
           <td valign="bottom"> 
             <p><small>Cursor Right</small></p>
@@ -984,10 +984,26 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Page Down</small></p>
+            <p><small>Previous Page</small></p>
           </td>
           <td valign="bottom"> 
             <p><small>Cursor Left</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Next Subpage</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Cursor Down</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Previous Subpage</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Cursor Up</small></p>
           </td>
         </tr>
       </table>
