Updated Links to be more up to date

--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -53,72 +53,47 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h3>Related Projects</h3>
+<h3>Related Software Projects</h3>
 
 <blockquote>
-<p><a href="palmovie/index.htm">PALMovie deinterlace plugin for
-bTV</a><br>
- <a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD Bt848
-Driver Project</a><br>
- <a href="http://me.in-berlin.de/%7Ekraxel/bttv.html">bttv -
-Linux Driver</a><br>
- <a href=
-"http://www.virtualdub.org/index">VirtualDub</a><br>
-          <a href="http://home.bip.net/gunnart/video/">Gunnar Thalin's VirtualDub 
-          Plug-ins</a></p>
+ <a href="http://tvtime.sf.net/">TVTime - A linux TV viewing program that uses 
+ 		some of DScaler's plug-in code</a><br>
+ <a href="http://www.virtualdub.org/index">VirtualDub - Video capture and processing</a><br>
+ <a href="http://home.bip.net/gunnart/video/">Gunnar Thalin's VirtualDub Plug-ins</a><br>
 </blockquote>
 
-<h3><br>
- Discussion</h3>
+<h3>Other Projects we've borrowed code from</h3>
 
-      <blockquote>
-        <p><a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=89606">DSclaer 3.1.0 
-          Release Thread</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=32723"> DScaler 2.3.0 
-          Release Thread</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78268"> dTV 2.1.2 Release 
-          Thread</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76603">dTV 2.0.2 Release 
-          Thread</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76526">dTV 2.0.1 Release 
-          Thread</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75972">dTV 2.0.0 Release 
-          Thread</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75799">ANNOUNCEMENT: 
-          dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75276">NEW VERSION: 
-          dTV 1.8 released</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75045">dTV 1.7 Experimental 
-          Beta</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74931">dTV 1.6 Experimental 
-          Beta</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74773">dTV 1.5 - Auto 
-          Pulldown detect & better video deinterlacing</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74732">dTV Version 
-          1.4</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74664">dTV New Release 
-          Version 1.3</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74586">New version 
-          of dTV - now with video souce deinterlacing</a> (AVS Forum)<br>
-          <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78328">First Version 
-          of NTSC/PAL TV deinterlacing program</a> (AVS Forum)<br>
-        </p>
-        </blockquote>
+<blockquote>
+ <a href="http://vulture.dmem.strath.ac.uk/bt848/">Bt848 - FreeBSD
+Driver</a><br>
+ <a href="http://me.in-berlin.de/%7Ekraxel/bttv.html">bttv -
+Linux Driver</a><br>
+ <a href="http://www.libtiff.org/">LibTiff</a><br>
+ <a href="http://http://www.ijg.org/">LibJpeg</a><br>
+ <a href="http://bytesex.org/saa7134/">saa7134 - Linux driver</a><br>
+</blockquote>
+
+<h3>DScaler Friendly Hardware Manufacurers</h3>
+
+<blockquote>
+<p>
+ <a href="http://www.sdisilk.com/">SDI Silk Card</a><br>
+ <a href="http://www.immersiveinc.com/holo3d/index.htm">Holo3DGraph from Immersive</a><br>
+</blockquote>
+
+<h3>Sites we visit</h3>
+<blockquote>
+ <a href="http://www.avsforum.com/">AVS Forum</a><br>
+ <a href="http://www.avforums.com/">AV Forums - UK based forum</a><br>
+</blockquote>
+
+<h3>Projects we're involved in or have contributed to</h3>
+
+<blockquote>
+<a href="palmovie/index.htm">PALMovie deinterlace plugin for bTV</a><br>
+ <a href="http://id3lib.sf.net/">id3lib</a><br>
+</blockquote>
 
 <!-- #EndEditable --></td>
 </tr>
