Removed footer and fixed broken link

--- a/DScaler/Help/CVS_Instructions.htm
+++ b/DScaler/Help/CVS_Instructions.htm
@@ -49,7 +49,7 @@ height="2"></td>
         <li>Download the latest version of WinCVS from <a target="_blank" href="http://www.cvsgui.org/">http://www.cvsgui.org</a>. 
           Install it. (Instructions confirmed with version 1.3 beta 6.)<br>
           &nbsp; </li>
-        <li> Download the latest windows setup program from <a href="sfsetup.sourceforge.net">http://sfsetup.sourceforge.net</a> 
+        <li> Download the latest windows setup program from <a href="http://sfsetup.sourceforge.net">http://sfsetup.sourceforge.net/</a> 
           and unpack it. (Instructions confirmed with version 1.3.)<br>
           &nbsp; </li>
         <li> Run sfsetup.exe... It may give you a WinCVS error. That`s OK. Have 
@@ -103,35 +103,30 @@ height="2"></td>
           This will make the changes in the CVS. After each step, you will be 
           presented with the DOS window discussed in #6, above.</li>
       </ol>
-      <!-- #EndEditable --></td>
-  </tr>
-  <tr> 
-    <td colspan="3" height="21">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3" height="6"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3" height="21">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3" height="40"> 
-      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
-        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
-        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
-        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
-        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
-        | <a href="Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+      <!-- #EndEditable --> </td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" width="88" height="31" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
-</body>
-<!-- #EndTemplate -->
+
+</body><!-- #EndTemplate -->
+
 </html>
+
