fixed broken link

--- a/htdocs/CVS_Instructions.htm
+++ b/htdocs/CVS_Instructions.htm
@@ -49,7 +49,8 @@ height="2"></td>
         <li>Download the latest version of WinCVS from <a target="_blank" href="http://www.cvsgui.org/">http://www.cvsgui.org</a>. 
           Install it. (Instructions confirmed with version 1.3 beta 6.)<br>
           &nbsp; </li>
-        <li> Download the latest windows setup program from <a href="sfsetup.sourceforge.net">http://sfsetup.sourceforge.net</a> 
+        <li> Download the latest windows setup program from 
+				  <a href="http://sfsetup.sourceforge.net/">http://sfsetup.sourceforge.net/</a> 
           and unpack it. (Instructions confirmed with version 1.3.)<br>
           &nbsp; </li>
         <li> Run sfsetup.exe... It may give you a WinCVS error. That`s OK. Have 
