--- a/DScaler/Help/SourceSpecific.HTM
+++ b/DScaler/Help/SourceSpecific.HTM
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" -->
-<title>DScaler -- Ini File Settings</title>
+<title>DScaler -- Source Specific Settings</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
 "text/html; charset=iso-8859-1">
@@ -39,7 +39,7 @@ height="1"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->
-DScaler.ini Settings  
+Source Specific Settings
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -55,22 +55,18 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
-<p>Almost all features of the program are configurable through the menu
-system.  All the
-settings used by the program are stored in the ini file and no changes are
-made to the registry.</p>
-
-<p>While the default name of this file is DScaler.ini, other
-names and copies may be used, to create multiple profiles.  Just
-create a shortcut to invoke DScaler with a single parameter such
-as "DScaler.exe vcr.ini".  This would cause the vcr.ini (or
-whatever) file to be used and saved on exit.  Doing this is
-easiest if you copy a working DScaler.ini file first and then
-change it using the DScaler menus.</p>
-
+<p>Many of the settings that DScaler uses for individual sources are configurable.</p>
+<p>Whilst most users should use the default setting we know there are people out
+there who will want to tweak DScaler.</p>
+<p>All the settings in DScaler have been optimized to run with many sources.
+However you may find that certain settings work better with your setup.
+</p>
+<p>If you feel that your settings are better than the defaults over a wide range 
+of material please let us know.</p>
 <!-- #EndEditable -->
 </td>
 </tr>
+
 <tr>
 <td colspan="3"> </td>
 </tr>
